# phone-record-server

./: .dockerignore  .env.example  .gitignore  AUTHENTICATION.md  Dockerfile  README.md  docker-compose.yml  hermes_codex_adapter.py  main.py  pyproject.toml  remote-agent-auth.example.json  start_with_adapter.sh
app/: alibailian_asr.py  config.py  docx_export.py  naming.py  remote_relay.py  summary.py  summary_templates.py  transcription.py
nas_server/: requirements-server.txt
nas_server/backend/: run_server.py
nas_server/backend/app/: backfill.py  classify.py  config.py  daily_task.py  db.py  grading.py  llm.py  main.py  mistakes.py  repository.py  schemas.py  similar.py  sm2.py  upload_pipeline.py  uploads.py  weakness.py
nas_server/backend/app/extraction/: __init__.py  importer.py  jixun.py  pdf.py  schema.py  vlm.py
nas_server/data/imports/: exam_points.jsonl  knowledge_points.jsonl  lecture_materials.jsonl  manifest.json  questions.jsonl
nas_server/data/imports/reports/: _github_cpa_economic_law_candidate_mapping.json  _github_cpa_economic_law_import_report.json  _hqwx_zhongji_import_report.json  _hqwx_zhongji_semantic_mapping.json  _ideafinbench_accounting_candidate_mapping.json  _ideafinbench_accounting_import_report.json  _ideafinbench_financial_management_candidate_mapping.json  (+2 more)
nas_server/frontend_dist/: index.html  manifest.webmanifest
nas_server/frontend_dist/assets/: index-BOQgVw_w.js  index-ChB0AZ9U.css
scripts/: upload_audio_folder.py
shared/output/: e6e9c631-8de0-494e-9ef6-fc02441be8e3.json
tests/: test_remote_relay.py
